# woocommerce_app

./: README.md  pyproject.toml
.github/workflows/: ci.yml
woocommerce_app/: hooks.py  modules.txt
woocommerce_app/woocommerce_app/custom/: address.json  contact.json  customer.json  item.json  item_barcode.json  item_default.json
woocommerce_app/woocommerce_app/doctype/sync_woocommerce/: sync_woocommerce.js  sync_woocommerce.json  sync_woocommerce.py  test_sync_woocommerce.py
woocommerce_app/woocommerce_app/doctype/woocommerce_settings/: test_woocommerce_settings.py  woocommerce_settings.js  woocommerce_settings.json  woocommerce_settings.py
woocommerce_app/woocommerce_app/fetch_api/: woo.py
woocommerce_app/woocommerce_app/workspace/woocommerce/: woocommerce.json
